--- a/Collab/Lookalike 1/index.html
+++ b/Collab/Lookalike 1/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Look alikes</title>
 </head>
 <body>
-    
+    <h1>
+        <marquee>Presenting look alikes so similar its uncanny!!</marquee>
+    </h1>
+    <marquee
+  direction="down"
+  width="500"
+  height="500"
+  behavior="alternate"
+  class="outlined">
+  <marquee behavior="alternate">This text will bounce</marquee>
+</marquee>
+<select>
+  <option value="">--Please choose an option--</option>
+  <option>Dog</option>
+  <option>Cat</option>
+  <option>Hamster</option>
+  <option>Parrot</option>
+  <option>Spider</option>
+</select>
+
+
+    <!-- <p>Which of these people look alike</p>
+<input list="Adam">
+<datalist id="Adam">
+    <option>M'Baku</option>
+    <option>Mordo</option>
+    <option>Maximoff</option>
+    <option>Magneto</option>
+    <option>Malekith</option>
+    <option>Mantis</option>
+ </datalist> -->
+   
 </body>
 </html>
