--- a/Collab/Lookalike 1/index.html
+++ b/Collab/Lookalike 1/index.html
@@ -6,25 +6,58 @@
     <title>Look alikes</title>
 </head>
 <body>
-    <h1>
-        <marquee>Presenting look alikes so similar its uncanny!!</marquee>
-    </h1>
-    <marquee
-  direction="down"
-  width="500"
-  height="500"
-  behavior="alternate"
-  class="outlined">
-  <marquee behavior="alternate">This text will bounce</marquee>
-</marquee>
-<select>
-  <option value="">--Please choose an option--</option>
-  <option>Dog</option>
-  <option>Cat</option>
-  <option>Hamster</option>
-  <option>Parrot</option>
+    <marquee bgcolor="red" scrollamount="20">
+        <font color="white">
+        <font size="7">
+            See the uncanny for yourself!!
+        </font>
+    </font>
+ </marquee>
+ <pre align="center">
+
+    <pre>
+        <h1>
+            <marquee behavior="" direction="">
+                <center>
+                    <select>
+  <option value="">--Select to view the uncanny!--</option>
+  <option>Adam Sandler</option>
+  <option>M&m</option>
+  <option>Ariana Grande</option>
+  <option></option>
   <option>Spider</option>
 </select>
+                    <font color="red">
+                        <a href="Images/JeffreyDeanMorgan.webp"> Select to see the Uncanny </a>
+
+                    </font>
+            
+                </center>
+            </marquee>
+        </h1>
+    
+ </center>
+ 
+
+ </pre>
+  <marquee  
+  direction="down"
+  width="1000"
+  height="1000"
+  behavior="alternate"
+  class="outlined">
+  <select>
+  <option value="">--Select to view the uncanny!--</option>
+  
+  <option value="https://www.google.com">Google</option>
+  <option value="https://www.facebook.com">Facebook</option>
+
+  <option>Ariana Grande</option>
+  <option></option>
+  <option>Spider</option>
+</select>
+</marquee>
+
 
 
     <!-- <p>Which of these people look alike</p>
