--- a/Collab/lookalike 2/index.html
+++ b/Collab/lookalike 2/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Adam Sandler</h1>
+    <h2>
+        Which is which? 
+    </h2>
+    <img src="kanyew3st.jpg" alt="kanyew3st">
 </body>
 </html>
