--- a/Collab/Lookalike 1/index.html
+++ b/Collab/Lookalike 1/index.html
@@ -3,73 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Look alikes</title>
+    <title>Document</title>
 </head>
 <body>
-    <marquee bgcolor="red" scrollamount="20">
-        <font color="white">
-        <font size="7">
-            See the uncanny for yourself!!
-        </font>
-    </font>
- </marquee>
- <pre align="center">
-
-    <pre>
-        <h1>
-            <marquee behavior="" direction="">
-                <center>
-                    <select>
-  <option value="">--Select to view the uncanny!--</option>
-  <option>Adam Sandler</option>
-  <option>M&m</option>
-  <option>Ariana Grande</option>
-  <option></option>
-  <option>Spider</option>
-</select>
-                    <font color="red">
-                        <a href="Images/JeffreyDeanMorgan.webp"> Select to see the Uncanny </a>
-
-                    </font>
-            
-                </center>
-            </marquee>
-        </h1>
     
- </center>
- 
-
- </pre>
-  <marquee  
-  direction="down"
-  width="1000"
-  height="1000"
-  behavior="alternate"
-  class="outlined">
-  <select>
-  <option value="">--Select to view the uncanny!--</option>
-  
-  <option value="https://www.google.com">Google</option>
-  <option value="https://www.facebook.com">Facebook</option>
-
-  <option>Ariana Grande</option>
-  <option></option>
-  <option>Spider</option>
-</select>
-</marquee>
-
-
-
-    <!-- <p>Which of these people look alike</p>
-<input list="Adam">
-<datalist id="Adam">
-    <option>M'Baku</option>
-    <option>Mordo</option>
-    <option>Maximoff</option>
-    <option>Magneto</option>
-    <option>Malekith</option>
-    <option>Mantis</option>
- </datalist> -->
-   
 </body>
 </html>
