--- a/Collab/4index.html
+++ b/Collab/4index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kanye</title>
 </head>
 <body>
-    
+    <h1>kanye West</h1>
+    <img src="Images/kanyew3st.jpg" alt="Kanye West">
+    <img src="Images/Kanyewest2.jpg" alt="Kanye West">
 </body>
 </html>
