--- a/Collab/3index.html
+++ b/Collab/3index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Leonardo</h1>
     <img src="Lookalike 1/Images/LeoNardo.png" alt="Leonardo">
+    <br>
+    <br>
+    <a href="Mainindex.html">Home</a>
     
 </body>
 </html>
