--- a/Collab/4index.html
+++ b/Collab/4index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>kanye West</h1>
-    <img src="Images/kanyew3st.jpg" alt="Kanye West">
-    <img src="Images/Kanyewest2.jpg" alt="Kanye West">
+    <img src="Lookalike 1/Images/kanyew3st.jpg" alt="Kanye West" width="900">
+    <img src="Lookalike 1/Images/Kanyewest2.jpg" alt="Kanye West" width="680">
+    <br>
+    <br>
+    <br>
+    <a href="/project-1/Collab/Mainindex.html">Home</a>
 </body>
 </html>
