--- a/Collab/Lookalike 1/1index.html
+++ b/Collab/Lookalike 1/1index.html
@@ -6,7 +6,7 @@
     <title>JeffreyDeanMorgan</title>
 </head>
 <body>
-    <h2>effreyDeanMorgan</h2>
+    <h2>JeffreyDeanMorgan</h2>
     <img src="Images/JeffreyDeanMorgan.webp" alt="JeffreyDeanMorgan">
     <img src="Images/LawsonJames.jpg" alt="JeffreyDeanMorgan">
     <br>
