--- a/Collab/Mainindex.html
+++ b/Collab/Mainindex.html
@@ -56,7 +56,9 @@
                         </marquee>
                         <br>
                         <br>
-                        <a href="">Don't skip this one</a>
+                        <a href="5index.html">Don't skip this one</a>
+                        <br>
+                        <br>
 
 
 
