--- a/Collab/2index.html
+++ b/Collab/2index.html
@@ -9,5 +9,8 @@
 <body>
     <img src="Lookalike 1/Images/NataliePortman.jpg" alt="NataliePortman" width="680">
     <img src="Lookalike 1/Images/Keira Knightley.webp" alt="Keira">
+    <br>
+    <br>
+    <a href="/project-1/Collab/Mainindex.html">Home</a>
 </body>
 </html>
