--- a/Collab/Mainindex.html
+++ b/Collab/Mainindex.html
@@ -49,7 +49,7 @@
                          </marquee>
         <br>
         <br> <marquee  
-                            direction="up"
+                            direction="down"
                             width="900"
                             height="600"
                             behavior="alternate"
